Adds a mouseover pixel infobox
Uses d3-select and canvas element to display pixel data about
the pixel currently under the mouse pointer. Changes div
background color to match pixel color (converted from RGB).

--- a/src/pinfo.css
+++ b/src/pinfo.css
@@ -35,3 +35,20 @@ canvas#photo-frame {
     margin-top: 5px;
     opacity: 0;
 }
+
+#mouse-position {
+    border-radius: 12px;
+    border: 2px double black;
+    padding: 12px;
+    text-align: center;
+    font-size: 18px;
+    font-family: sans-serif;
+    color: #e8e8e8;
+    display: none;
+}
+
+#sat-box {
+    text-align: left;
+    font-size: 14px;
+    font-family: sans-serif;
+}
